--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
         <h2>Respuesto de motor</h2>
         <p>En esta sección se encuentran los repuestos de motor que tenemos disponibles.</p>
-        <img src="imagen-1.jpeg" alt="Repuesto de motor 1" style="width: 300px; height: auto;">
+        <img src="imagen-2.jpg" alt="Repuesto de motor 1" style="width: 300px; height: auto;">
     </section>
 </body>
 </html>
