avances del proyecto

--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Koki</title>
 </head>
+
 <body>
     <h1>Jorge Motors</h1>
     <section>
         <h2>Respuesto de motor</h2>
         <p>En esta sección se encuentran los repuestos de motor que tenemos disponibles.</p>
         <img src="imagen-2.jpg" alt="Repuesto de motor 1" style="width: 300px; height: auto;">
+        <img src="imagen-3.jpg" alt="Repuesto de motor 1" style="width: 300px; height: auto;">
+        <img src="imagen-4.jpeg" alt="Repuesto de motor 1" style="width: 300px; height: auto;">
+    </section>
+    <section>
+        <h2>Kits de embrague</h2>
+        <p>En esta sección se encuentran los kits de embrague que tenemos disponibles.</p>
+        <ul>
+            <li>Embrague mecanico</li>
+            <li>Embrague automatico</li>
+            <li>Embrague semi-automatico</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Creacion de boton</h2>
+        <button>CLICK</button>
+    </section>
+    <section>
+        <h2>Creacion de tablas</h2>
+        <table border="1" style="width: 100%; border-collapse: collapse;">
+            <thead>
+                <tr>
+                    <th>Tipo de caja</th>
+                    <th>Precio</th>
+                    <th>Procedencia</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Manual</td>
+                    <td>$500</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>Automatica</td>
+                    <td>$700</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <td>CVT</td>
+                    <td>$800</td>
+                    <td>USA</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+    <section>
+        <h2>Uso de bloques en linea</h2>
+        <br>
+        <div style="background-color: lightblue; padding: 20px; border-radius: 5px;">
+            <h3>Bloque de texto</h3>
+            <p>Este es un bloque de texto que se utiliza para mostrar información adicional.</p>
+        </div>
     </section>
 </body>
+
 </html>
